# mil_pre_processor

./: .gitignore  README.md  config.yaml  init_git.sh  pyproject.toml  requirements.txt  run-proc.sh  setup.sh  update.sh
docs/: RELATORIO_PROJETO.md
docs/pesquisa/: hsv_stain_ranges.md  otsu_biopsy_params.md  qupath_geojson_spec.md
docs/typst/: README.md  presentation.typ
scripts/: run.py  run_phase4.py  run_phase5.py  test_fixes.py
src/mil/: _constants.py  alerts.py  balance.py  config.py  human_report.py  margin.py  phase1_stain_classifier.py  phase2_tissue_detector.py  phase3_dataset_builder.py  phase4_cropper.py  phase5_renamer.py  pipeline.py  report.py  run_logger.py  runtime_log.py  slide_reader.py  tiff_detector.py
tests/: test_dataset_builder.py  test_stain_classifier.py  test_tissue_detector.py
